build(3.0.x): 修复 pom.xml 描述/版本号; 同步 feature/2.0.x 现代化 Java 源码 (JDK 21)